--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,10 @@
             "maxDuration": 30
         }
     },
-    "routes": [{ "src": "/", "dest": "./api/index.go" }]
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/api/index.go"
+        }
+    ]
 }
